--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "knex-cleaner": "^1.3.1"
   },
   "devDependencies": {
+    "eslint": "^8.28.0",
     "nodemon": "^2.0.15"
   },
   "repository": {
